WordpressKubernetes/kubernetes/05-services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-isolated-ns
  name: wp-mariadb-svc
  labels:
    app: wp-mariadb
spec:
  selector:
    app: wp-mariadb
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  namespace: my-isolated-ns
  name: wp-wordpress-svc
  labels:
    app: wp-wordpress
spec:
  selector:
    app: wp-wordpress
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
