WordpressKubernetes/kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: my-isolated-ns
  name: wp-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: my-isolated-site.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-wordpress-svc
            port: 
              number: 8080
