WordpressKubernetes/kubernetes/01-configurations.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-isolated-ns
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: my-isolated-ns
  name: wp-isolate-namespace
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
